refactor: Rename variables named 'var' or 'record'
Resolves Restricted Identifiers should not be used as Identifiers java:S6213